# testforge

./: .env.example  .eslintrc.cjs  .gitignore  Makefile  README.md  docker-compose.yml  electron-builder.yml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: settings.local 2.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260216_2057_9f1219c373ec_initial_migration.py  20260217_0001_add_scanner_tables.py  20260217_0002_add_report_schedules.py  20260218_0001_add_login_credentials.py  20260218_0002_add_content_hash.py  20260218_0003_encrypt_credentials.py  20260218_0004_add_users_table.py  20260218_0005_add_entry_points_by_type.py  20260219_0001_add_browser_to_project_config.py  20260219_0002_add_language_framework_fields.py
backend/app/: __init__.py  config.py  main.py  ws.py
backend/app/ai/: __init__.py  providers.py
backend/app/ai/agents/: __init__.py  code_reviewer.py  failure_analyzer.py  test_generator.py
backend/app/ai/rag/: __init__.py  indexer.py  retriever.py
backend/app/api/v1/: __init__.py  ai.py  auth.py  projects.py  report_schedules.py  reports.py  scanner.py  settings.py  test_runs.py  traces.py  workspace.py
backend/app/core/: __init__.py  engine.py  error_categorizer.py
backend/app/core/runners/: __init__.py  backend_runner.py  base.py  database_runner.py  frontend_runner.py  infrastructure_runner.py
backend/app/core/security/: __init__.py  auth.py  encryption.py  masking.py
backend/app/core/tracing/: __init__.py  telemetry.py  trace_collector.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  project.py  report_schedule.py  scanner.py  test_run.py  trace.py  user.py
backend/app/reports/: __init__.py  exporters.py  generator.py
backend/app/reports/templates/: report.html.jinja2
backend/app/schemas/: __init__.py  project.py  test_run.py  trace.py
backend/tests/: conftest.py
backend/tests/integration/: test_health.py  test_projects_api.py
backend/tests/unit/: test_ai_agents.py  test_exporters.py  test_generator.py  test_security.py
electron/: backend-manager.ts  (+3 more)
(+76 files in other folders)
